--- a/Lab0.1-ML/ELMED219-Lab0-simple_examples.ipynb
+++ b/Lab0.1-ML/ELMED219-Lab0-simple_examples.ipynb
@@ -3072,7 +3072,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **NOTE:** Of course, all these conclusions depend on the exact data set that we have used. To make any real inferences about diabets and its relation to glucose level, BMI, age etc one would need a much more carefully designed data set. "
+    "> **NOTE:** Of course, all these conclusions depend on the exact data set that we have used. To make any real inferences about diabetes and its relation to glucose level, BMI, age etc one would need a much more carefully designed data set. "
    ]
   },
   {
