--- a/Lab3-DL/ELMED219-2022-Lab3-DL-Example-1-image_classification-MedNIST-using-PyTorch.ipynb
+++ b/Lab3-DL/ELMED219-2022-Lab3-DL-Example-1-image_classification-MedNIST-using-PyTorch.ipynb
@@ -2056,10 +2056,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "0efb9b751bb852c340406b2d0efb7281d2a0d6ebabc1a753778a254d7b555750"
+  },
   "kernelspec": {
-   "display_name": "DAT801",
+   "display_name": "ELMED219",
    "language": "python",
-   "name": "dat801"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2071,7 +2074,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
