link to monai etc

--- a/Lab3-DL/Extra-ELMED219-2022-Lab3-DL-Example-3-image_segmentation.ipynb
+++ b/Lab3-DL/Extra-ELMED219-2022-Lab3-DL-Example-3-image_segmentation.ipynb
@@ -572,11 +572,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Notes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This was just a very quick example to indicate how one could go about doing image tasks on medical data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you're interested in properly pursuing medical image analysis using deep learning, you should definitely check out the [MONAI](https://monai.io/) library.\n",
+    "\n",
+    "<img src=\"https://monai.io/assets/img/MONAI-logo_color.png\">\n",
+    "\n",
+    "Our group is also currently developing the _fastMONAI_ library, combining fastai with MONAI. To be publicly released soon. "
+   ]
   }
  ],
  "metadata": {
