--- a/Lab2-NLP/ELMED219-2021-Lab2-NLP-1-medical_tweets.ipynb
+++ b/Lab2-NLP/ELMED219-2021-Lab2-NLP-1-medical_tweets.ipynb
@@ -34,6 +34,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> **NB:** If you're running the notebook on Colab, you should attach a GPU to the session by clicking \"Runtime\" --> \"Change runtime type\" and then selecting a GPU hardware accelerator. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Setup"
    ]
   },
