--- a/Lab2-NLP/Extra-ELMED219-2022-Lab2-NLP-2-transformers.ipynb
+++ b/Lab2-NLP/Extra-ELMED219-2022-Lab2-NLP-2-transformers.ipynb
@@ -28,6 +28,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8b858afc",
+   "metadata": {},
+   "source": [
+    "> **NB:** If you're running the notebook on Colab, you should attach a GPU to the session by clicking \"Runtime\" --> \"Change runtime type\" and then selecting a GPU hardware accelerator. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "19b865c9-4f82-4aae-b596-a7c9ed6e9d0e",
    "metadata": {},
    "source": [
