note about colab

--- a/Lab3-DL/ELMED219-2022-Lab3-DL-Example-1-image_classification-MedNIST-using-PyTorch.ipynb
+++ b/Lab3-DL/ELMED219-2022-Lab3-DL-Example-1-image_classification-MedNIST-using-PyTorch.ipynb
@@ -398,8 +398,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.exists(DATADIR/'MedNIST'):\n",
-    "    shutil.unpack_archive(DATADIR/'MedNIST.tar.gz', extract_dir=DATADIR)"
+    "#if not os.path.exists(DATADIR/'MedNIST'):\n",
+    "shutil.unpack_archive(DATADIR/'MedNIST.tar.gz', extract_dir=DATADIR)"
    ]
   },
   {
@@ -450,6 +450,13 @@
     "                        transforms.ToTensor(),                       # Convert the images to tensors \n",
     "                        transforms.Grayscale(num_output_channels=1)  # Convert the images to grayscale\n",
     "                        ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">**NB**: If using Colab you may get some kind of \"file not found\" error when running the below cell. In that case, wait a bit and try again (it's a Google Drive sync issue). "
    ]
   },
   {
