--- a/Lab4-BRATS/ELMED219-2022-Lab4-BRATS-segmentation-3D-MONAI.ipynb
+++ b/Lab4-BRATS/ELMED219-2022-Lab4-BRATS-segmentation-3D-MONAI.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "This notebook on Colab: [![Open this demo in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/MMIV-ML/ELMED219-2022/blob/main/Lab4-BRATS/ELMED219-2022-Lab4-BRATS-segmentation-3D-MONAI.ipynb)\n",
     "\n",
-    "The corresponding MONAI tutorial notebook: [![Open MONAI tutorial in Colab](https://colab.research.google.com/assets/colab-badge.svg)]((https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Project-MONAI/tutorials/blob/master/3d_segmentation/brats_segmentation_3d.ipynb))"
+    "The corresponding MONAI tutorial notebook: [![Open MONAI tutorial in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Project-MONAI/tutorials/blob/master/3d_segmentation/brats_segmentation_3d.ipynb)"
    ]
   },
   {
@@ -449,6 +449,7 @@
    "outputs": [],
    "source": [
     "if colab:\n",
+    "    NB_DIR = Path.cwd()\n",
     "    from google.colab import drive\n",
     "    drive.mount('/content/drive')\n",
     "    brats_data_dir = Path('/content/drive/My Drive/ELMED219')\n",
@@ -457,6 +458,7 @@
     "    #directory = None\n",
     "    #MONAI_DATA_DIRECTORY = Path('/storage/brats') or /workspace/data/medical\n",
     "else:\n",
+    "    NB_DIR = Path.cwd()\n",
     "    brats_data_dir = Path(f'{home}/prj/ELMED219/BRATS_DATA')\n",
     "    root_dir = brats_data_dir"
    ]
@@ -1320,10 +1322,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for lst in ['best_metric_epoc', 'best_metrics_epochs_and_time', 'epoch_loss_values', \n",
-    "           'metric_values', 'metric_values_tc', 'metric_values_wt', 'metric_values_et']:\n",
-    "    with open(f'./assets/ELMED219_BRATS_{lst}.pkl', 'wb') as f:\n",
-    "        pickle.dump(lst, f)"
+    "if not colab:\n",
+    "    for lst in ['best_metric_epoc', 'best_metrics_epochs_and_time', 'epoch_loss_values', \n",
+    "            'metric_values', 'metric_values_tc', 'metric_values_wt', 'metric_values_et']:\n",
+    "        with open(f'./assets/ELMED219_BRATS_{lst}.pkl', 'wb') as f:\n",
+    "            pickle.dump(lst, f)"
    ]
   },
   {
@@ -1423,12 +1426,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PTH_file = './assets/best_metric_model_5820_rtx6000_300epochs_20220115_1048.pth'\n",
-    "best_model = model.load_state_dict(torch.load(PTH_file))"
+    "if colab:\n",
+    "    !wget https://github.com/MMIV-ML/ELMED219-2022/raw/main/Lab4-BRATS/assets/best_metric_model_5820_rtx6000_300epochs_20220115_1048.pth\n",
+    "    PTH_file = 'best_metric_model_5820_rtx6000_300epochs_20220115_1048.pth'\n",
+    "    model.load_state_dict(torch.load(PTH_file))\n",
+    "if not colab:\n",
+    "    PTH_file = 'assets/best_metric_model_5820_rtx6000_300epochs_20220115_1048.pth'\n",
+    "    model.load_state_dict(torch.load(NB_DIR/'assets'/'best_metric_model_5820_rtx6000_300epochs_20220115_1048.pth'))"
    ]
   },
   {
@@ -1546,7 +1561,7 @@
    ],
    "source": [
     "from IPython.display import Image\n",
-    "Image(filename='./assets/ELMED219_BRATS_DATA_300_epochs_loss_and_metric.png', width=900) "
+    "Image('https://raw.githubusercontent.com/MMIV-ML/ELMED219-2022/main/Lab4-BRATS/assets/ELMED219_BRATS_DATA_300_epochs_loss_and_metric.png', width=900) "
    ]
   },
   {
@@ -1599,10 +1614,6 @@
     }
    ],
    "source": [
-    "model.load_state_dict(\n",
-    "#    torch.load(os.path.join(root_dir, \"best_metric_model.pth\"))\n",
-    "     torch.load(os.path.join('./assets', 'best_metric_model_5820_rtx6000_300epochs_20220115_1048.pth'))\n",
-    ")\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
     "    # select one image to evaluate and visualize the model output\n",
@@ -1703,13 +1714,8 @@
     }
    ],
    "source": [
-    "if colab:\n",
-    "    model.load_state_dict(torch.load(\n",
-    "    os.path.join(root_dir, \"best_metric_model.pth\")))\n",
-    "else:\n",
-    "    model.load_state_dict(\n",
-    "    torch.load(os.path.join('./assets', 'best_metric_model_5820_rtx6000_300epochs_20220115_1048.pth')))\n",
-    "    \n",
+    "dice_metric = DiceMetric(include_background=True, reduction=\"mean\")\n",
+    "dice_metric_batch = DiceMetric(include_background=True, reduction=\"mean_batch\")\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
     "    for val_data in val_org_loader:\n",
